--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jeevasubburaj.freeebooknotifier">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- add receiver -->
+        <receiver android:name=".AlarmReceiver" />
+
+        <service
+            android:name=".NotificationService"
+            android:enabled="true" />
+
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
