--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -22,7 +22,7 @@
         </activity>
 
         <!-- add receiver -->
-        <receiver android:name=".NotificationReceiver" />
+        <receiver android:name=".NotificationReceiver" android:enabled="true" />
 
         <service
             android:name=".NotificationService"
